# CSA-lab-4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
VM/: CPU.py  vm.py
VM/ALU/: alu.py
VM/CU/: ROB.py  RS.py  control_unit.py
VM/IO/: outputinterface.py
VM/MEM/: registers.py
tests/: conftest.py  test_golden.py
tests/algo2/: algo2.txt
tests/golden/: algo2.yml  cat.yml  hello.yml  long.yml  print_name.yml  sort.yml  token.yml
tests/hello/: hello.txt
tests/long/: long.txt
tests/print_name/: print_name.lst  print_name.txt  print_name_input.txt  print_name_log
tests/sort/: sort.txt  sort_input.txt
tests/token/: token.txt
translator/: EBNF.txt  forthcompiler.py
vm/: cpu.py  vm.py
vm/alu/: alu.py
vm/cu/: control_unit.py  rob.py  rs.py
vm/io/: inputinterface.py
vm/mem/: memory.py  mux.py
