[project]
name = "forth-compiler"
version = "0.1.0"

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ISC", "PT"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-golden>=0.2.0",
    "PyYAML>=6.0",
]